--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -171,7 +171,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
         {{#npc.specialties.special-equipment}}
           
         {{/npc.specialties.special-equipment}}
-      {{#npc.specialties.special-equipment.length}}
+		{{#npc.specialties.special-equipment.length}}</p>
       
       <p> {{/npc.specialties.special-equipment.length}}
           <!-- property block -->
