--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -209,7 +209,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	
 		
 
-	  <img id="portrait" src="../../images/{{npc.name}}.jpg" alt="" width="300px" height="auto">
+	  <img id="portrait" src="../../images/DUMMY.jpg" alt="" width="300px" height="auto">
 		<div class="actions">
 			<h3>Roleplaying</h3>
 			<h4>Introduction</h4>
