--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -209,7 +209,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	
 		
 
-	  <img id="portrait" src="../../images/DUMMY.jpg" alt="" width="300px" height="auto">
+	 <img id="portrait" src="http://example.com/non-existent-image.jpg" onerror="this.onerror=null;this.src='http://example.com/existent-image.jpg';" />
 		<div class="actions">
 			<h3>Roleplaying</h3>
 			<h4>Introduction</h4>
@@ -242,13 +242,13 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			<span><p>{{npc.acting.passions}}</p></span>
 		</div> 
 		
-	</div> <!-- section right -->
-
 	
 		<div class="actions">
 <h4>Secrets</h4>
 	<span><p>{{npc.acting.secrets}}</p></span>		
 		</div> 
+	</div> <!-- section right -->
+
 			
 			<div class="actions">
 <h3>Background</h3>
