Handling Non-existing images

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -209,7 +209,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	
 		
 
-	 <img id="portrait" src="./npc_imgs/DUMMY.jpg" onerror="this.onerror=null;this.src='./npc_imgs/{{npc.name}}';" />
+	 <img id="portrait" src="./npc_imgs/{{npc.name}}.png" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
 		<div class="actions">
 			<h3>Roleplaying</h3>
 			<h4>Introduction</h4>
