--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -206,7 +206,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
     </div> <!-- section left -->
 	<div class="section-right">
 	
-	
+	<p>TEST</p>
 		
 
 	 <img id="portrait" src="./npc_imgs/{{npc.name}}.png" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
