--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -267,7 +267,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 
 
   {{#metadata.author-notes.length}}
-  <div class="stat-block.single">
+  <div class="stat-block single">
     <div class="actions">
 		<h3> Author notes for the artist: </h3>
       <ul>
