Spaces and subtitling

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -211,13 +211,13 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	 <img id="portrait" src="./npc_imgs/{{npc.name}}.png" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
 	<div class="actions">
 			<h3>Roleplaying</h3>
-			<h4>Introduction</h4>
-			<span><p>{{npc.improv.introduction}}</p></span>
+			<br><h31>Introduction</h31>
+			<br><span><p>{{npc.improv.introduction}}</p></span>
 		</div> 
 		
 		<div class="actions">
-			<h4>Appearance</h4>
-		<span>	<p>{{npc.improv.appearance}}</p></span>
+			<h31>Appearance</h31>
+		<br><span>	<p>{{npc.improv.appearance}}</p></span>
 		</div> 
 		
 		<div class="actions">
