--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -209,50 +209,51 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		
 
 	 <img id="portrait" src="./npc_imgs/{{npc.name}}.png" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
-	<div class="actions">
+	<div class="property-block">
 			<h1>Roleplaying</h1>
 		<svg height="5" width="100%" class="tapered-rule">
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
-	  </svg>
-			<h5>Introduction</h5>
-			<span>{{npc.improv.introduction}}</span>
+			</div> </svg>
+		<div class="property-block">
+			<h4>Introduction</h4>
+			<br /><span>{{npc.improv.introduction}}</span>
 		</div> 
 		
-		<div class="actions">
-			<h5>Appearance</h5>
-		<span>	<p>{{npc.improv.appearance}}</p></span>
+		<div class="property-block">
+			<h4>Appearance</h4>
+		<br /><span>	<p>{{npc.improv.appearance}}</p></span>
 		</div> 
 		
-		<div class="actions">
+		<div class="property-block">
 			<h4>Expressions</h4>
-			<span><p>{{npc.improv.expressions}}</p></span>
+		<br />	<span><p>{{npc.improv.expressions}}</p></span>
 		</div> 
 		
-		<div class="actions">
+		<div class="property-block">
 			<h4>Mannerisms</h4>
-			<span><p>{{npc.improv.mannerisms}}</p></span>
+		<br />	<span><p>{{npc.improv.mannerisms}}</p></span>
 		</div> 
 		
-		<div class="actions">
+		<div class="property-block">
 			<h4>Motivations</h4>
-			<span><p>{{npc.acting.motivations}}</p></span>
+		<br />	<span><p>{{npc.acting.motivations}}</p></span>
 		</div> 
 		
 			
-			<div class="actions">
+			<div class="property-block">
 			<h4>Passions</h4>
-			<span><p>{{npc.acting.passions}}</p></span>
+		<br />	<span><p>{{npc.acting.passions}}</p></span>
 		</div> 
 		
 	
-		<div class="actions">
+		<div class="property-block">
 <h4>Secrets</h4>
-	<span><p>{{npc.acting.secrets}}</p></span>		
+	<br /><span><p>{{npc.acting.secrets}}</p></span>		
 		</div> 
 	</div> <!-- section right -->
 
 			
-			<div class="actions">
+			<div class="property-block">
 <h3>Background</h3>
 		<span>	<p>{{{npc.profile.background-story}}}</p></span>
 		<span>	<p>{{npc.profile.personality}}</p></span>	
