--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -209,44 +209,44 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		
 
 	 <img id="portrait" src="./npc_imgs/{{npc.name}}.png" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
-	<div class="property-block">
+	<div class="creature-heading">
 			<h1>Roleplaying</h1>
 		<svg height="5" width="100%" class="tapered-rule">
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
 			</div> </svg>
-		<div class="property-block">
+		<div class="property-line">
 			<h4>Introduction</h4>
-			<br /><span>{{npc.improv.introduction}}</span>
+			<br /><span><p>{{npc.improv.introduction}}</p></span>
 		</div> 
 		
-		<div class="property-block">
+		<div class="property-line">
 			<h4>Appearance</h4>
 		<br /><span>	<p>{{npc.improv.appearance}}</p></span>
 		</div> 
 		
-		<div class="property-block">
+		<div class="property-line">
 			<h4>Expressions</h4>
 		<br />	<span><p>{{npc.improv.expressions}}</p></span>
 		</div> 
 		
-		<div class="property-block">
+		<div class="property-line">
 			<h4>Mannerisms</h4>
 		<br />	<span><p>{{npc.improv.mannerisms}}</p></span>
 		</div> 
 		
-		<div class="property-block">
+		<div class="property-line">
 			<h4>Motivations</h4>
 		<br />	<span><p>{{npc.acting.motivations}}</p></span>
 		</div> 
 		
 			
-			<div class="property-block">
+			<div class="property-line">
 			<h4>Passions</h4>
 		<br />	<span><p>{{npc.acting.passions}}</p></span>
 		</div> 
 		
 	
-		<div class="property-block">
+		<div class="property-line">
 <h4>Secrets</h4>
 	<br /><span><p>{{npc.acting.secrets}}</p></span>		
 		</div> 
