--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -216,12 +216,12 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			</div> </svg>
 		<div class="property-line">
 			<h4>Introduction</h4>
-			<br /><span><p>{{npc.improv.introduction}}</p></span>
-		</div> 
+		</div><div class="actions">	<span><p>{{npc.improv.introduction}}</p></span></div>
+		
 		
 		<div class="property-line">
-			<h4>Appearance</h4>
-		<br /><span>	<p>{{npc.improv.appearance}}</p></span>
+	<h4>Appearance</h4></div>
+		<div class="actions"><span>	<p>{{npc.improv.appearance}}</p></span>
 		</div> 
 		
 		<div class="property-line">
@@ -256,7 +256,6 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			<div class="property-block">
 <h3>Background</h3>
 		<span>	<p>{{{npc.profile.background-story}}}</p></span>
-		<span>	<p>{{npc.profile.personality}}</p></span>	
 		</div> 
 				
 			
