--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -168,7 +168,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
      
         {{#npc.specialties.special-equipment}}
           <li>
-            <span class="field_value"> {{.}} </span>
+            <span > {{.}} </span>
           </li>
         {{/npc.specialties.special-equipment}}
       
