--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -219,13 +219,13 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			</div> </svg>
 		<div class="property-line">
 			<h4>Introduction</h4>
-		</div><div class="actions">	<span><p>{{npc.improv.introduction}}</p></span></div>
-		
+		<br /><span><p>{{npc.improv.introduction}}</p></span>
+		</div>
 		
 		<div class="property-line">
-	<h4>Appearance</h4></div>
-		<div class="actions"><span>	<p>{{npc.improv.appearance}}</p></span>
-		</div> 
+	<h4>Appearance</h4>
+		<br /><span>	<p>{{npc.improv.appearance}}</p></span>
+		</div>
 		
 		<div class="property-line">
 			<h4>Expressions</h4>
