--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -256,11 +256,14 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	</div> <!-- section right -->
 
 			
-			<div class="property-block">
-<h3>Background</h3>
+			<div class="creature-heading" align="left">
+    <div class="actions">
+		<h3>Background</h3></div>
 		<span>	<p>{{{npc.profile.background-story}}}</p></span>
 		<span>	<p>{{npc.profile.personality}}</p></span>	
 		</div> 
+</div>
+
 				
 			
 			
