--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -219,39 +219,41 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			</div> </svg>
 		<div class="property-line">
 			<h4>Introduction</h4>
-		<br /><span><p>{{npc.improv.introduction}}</p></span>
+			
+				<br />{{npc.improv.introduction}}
+				
 		</div>
 		
 		<div class="property-line">
 	<h4>Appearance</h4>
-		<br /><span>	<p>{{npc.improv.appearance}}</p></span>
+		<br />	{{npc.improv.appearance}}
 		</div>
 		
 		<div class="property-line">
 			<h4>Expressions</h4>
-		<br />	<span><p>{{npc.improv.expressions}}</p></span>
+		<br />	{{npc.improv.expressions}}
 		</div> 
 		
 		<div class="property-line">
 			<h4>Mannerisms</h4>
-		<br />	<span><p>{{npc.improv.mannerisms}}</p></span>
+		<br />	{{npc.improv.mannerisms}}
 		</div> 
 		
 		<div class="property-line">
 			<h4>Motivations</h4>
-		<br />	<span><p>{{npc.acting.motivations}}</p></span>
+		<br />	{{npc.acting.motivations}}
 		</div> 
 		
 			
 			<div class="property-line">
 			<h4>Passions</h4>
-		<br />	<span><p>{{npc.acting.passions}}</p></span>
+		<br />	{{npc.acting.passions}}
 		</div> 
 		
 	
 		<div class="property-line">
 <h4>Secrets</h4>
-	<br /><span><p>{{npc.acting.secrets}}</p></span>		
+	<br />{{npc.acting.secrets}}		
 		</div> 
 	</div> <!-- section right -->
 
