--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -220,7 +220,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		<div class="property-line">
 			<h4>Introduction</h4>
 			
-				<br />{{npc.improv.introduction}}
+				<br /><span>{{npc.improv.introduction}}</span>
 				
 		</div>
 		
