--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -220,7 +220,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		<div class="property-line">
 			<h4>Introduction</h4>
 			
-				<br /><span>{{npc.improv.introduction}}</span>
+			<br /><div class="actions">{{npc.improv.introduction}}</div>
 				
 		</div>
 		
