--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -165,7 +165,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		<div class="property-block">
 			<h4>Special Equipment</h4>
 			
-     
+     <ul>
         {{#npc.specialties.special-equipment}}
           <li>
             <span > {{.}} </span>
@@ -179,7 +179,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		
           <!-- property block -->
           <!-- property block -->
-      </p>
+     
 			</div>
        <div class="actions">
 			<h3>Combat Tactics</h3>
@@ -211,12 +211,12 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	
 		
 
-	 <img id="portrait" src="./npc_imgs/{{npc.name}}.png" width=300 height=auto onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
+	 <img id="portrait" alt="" src="./npc_imgs/{{npc.name}}.png" width="300" height="auto" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
 	<div class="creature-heading">
 			<h1>Roleplaying</h1>
 		<svg height="5" width="100%" class="tapered-rule">
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
-			</div> </svg>
+			 </svg></div>
 		<div class="property-line">
 			<h4>Introduction</h4>
 			
@@ -293,5 +293,5 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
     </div>
   </div> <!-- section-left -->
   {{/metadata.author-notes.length}}
-</div>
+
 </html>
