--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -218,9 +218,9 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
 			 </svg></div>
 		<div class="property-line">
-			<h4>Introduction</h4>
+			<h4>Introduction</h4></div>
 			
-			<br /><div class="property-block">{{npc.improv.introduction}}</div>
+			<br /><div class="property-block">{{npc.improv.introduction}}
 				
 		</div>
 		
