--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -213,16 +213,14 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 
 	 <img id="portrait" alt="" src="./npc_imgs/{{npc.name}}.png" width="300" height="auto" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.jpg';" />
 	<div class="creature-heading">
-			<h1>Roleplaying</h1>
+		<h1>Roleplaying</h1></div>
 		<svg height="5" width="100%" class="tapered-rule">
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
-			 </svg></div>
-		<div class="property-line">
-			<h4>Introduction</h4></div>
+			 </svg>
+		<div class="property-line">	<h4>Introduction</h4></div>
 			
-			<br /><div class="property-block">{{npc.improv.introduction}}
-				
-		</div>
+			<div class="property-block">{{npc.improv.introduction}}</div>
+		
 		
 		<div class="property-line">
 	<h4>Appearance</h4>
