--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -217,9 +217,9 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 		<svg height="5" width="100%" class="tapered-rule">
 	    <polyline points="0,0 400,2.5 0,5"></polyline>
 			 </svg>
-		<div class="property-line">	<h4>Introduction</h4></div>
+		<div class="actions">	<h3>Introduction</h3></div>
 			
-			<div class="property-block">{{npc.improv.introduction}}</div>
+			<div class="section-right">{{npc.improv.introduction}}</div><br />
 		
 		
 		<div class="property-line">
