--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -219,7 +219,7 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			 </svg>
 		<div class="actions">	<h3>Introduction</h3></div>
 			
-			<div class="section-right">{{npc.improv.introduction}}</div><br />
+			<div class="stat-block">{{npc.improv.introduction}}</div><br />
 		
 		
 		<div class="property-line">
