--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -219,39 +219,39 @@ Level {{npc.traits.level}} {{npc.traits.class}} {{npc.traits.subclass}}</h2>
 			 </svg>
 		<div class="actions">	<h3>Introduction</h3></div>
 			
-			<div class="stat-block">{{npc.improv.introduction}}</div><br />
+			<div class="property-line">{{npc.improv.introduction}}</div><br />
 		
 		
-		<div class="property-line">
-	<h4>Appearance</h4>
-		<br />	{{npc.improv.appearance}}
+		<div class="actions">
+			<h3>Appearance</h3></div>
+		<div class="property-line">	{{npc.improv.appearance}}
 		</div>
 		
-		<div class="property-line">
-			<h4>Expressions</h4>
-		<br />	{{npc.improv.expressions}}
+		<div class="actions">
+			<h3>Expressions</h3></div>
+		<div class="property-line">	{{npc.improv.expressions}}
 		</div> 
 		
-		<div class="property-line">
-			<h4>Mannerisms</h4>
-		<br />	{{npc.improv.mannerisms}}
+		<div class="actions">
+			<h3>Mannerisms</h3></div>
+		<div class="property-line">	{{npc.improv.mannerisms}}
 		</div> 
 		
-		<div class="property-line">
-			<h4>Motivations</h4>
-		<br />	{{npc.acting.motivations}}
+		<div class="actions">
+			<h3>Motivations</h3></div>
+			<div class="property-line">{{npc.acting.motivations}}</div>
 		</div> 
 		
 			
-			<div class="property-line">
-			<h4>Passions</h4>
-		<br />	{{npc.acting.passions}}
+			<div class="actions">
+			<h3>Passions</h3></div>
+		<div class="property-line">	{{npc.acting.passions}}
 		</div> 
 		
 	
-		<div class="property-line">
-<h4>Secrets</h4>
-	<br />{{npc.acting.secrets}}		
+		<div class="actions">
+			<h3>Secrets</h3></div>
+	<div class="property-line">{{npc.acting.secrets}}		
 		</div> 
 	</div> <!-- section right -->
 
