--- a/npcs/html_tests/testing_space.html
+++ b/npcs/html_tests/testing_space.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 
-<link rel="stylesheet" href="../html tests/testing_style.css"/>
+<link rel="stylesheet" href="testing_style.css"/>
 	</head>
 
 <body>
