--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -15,7 +15,7 @@
 		<div class="container">
   		
 			<div class="cell" id="cell1">
-			CELL 1	
+			CELL ONE	
 			<span class="data">
 				<hr class="steel-border" />
 					<span class="stat-block wide">
