--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>{{npc.name}}</title>
 
-<link rel="stylesheet" href="stylesheet - neutral evil.css"/>
+<link rel="stylesheet" href="stylesheet - {{npc.traits.alignment}}"/>
 	
 	
 	
