--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -4,8 +4,9 @@
 <meta charset="utf-8">
 <title>{{npc.name}}</title>
 
-<link rel="stylesheet" href="stylesheet {{npc.traits.alignment}}.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheet.css"/>
+	
+	
 	
 	
 	
@@ -14,28 +15,7 @@
 
 	<body>
 		
-		<div class="topnav" id="myTopnav">
-  <a href="#home" class="active"><img src="images/LOGO_TWO_FINAL_ON_BLACK.png" id="logo" alt=""></a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars" aria-hidden="true"></i>
-  </a>
-
-		</div>
-		
-		<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
-
+		<div class="banner"><a href="../../../docs-index/index.html"><img src="images/LOGO_TWO_FINAL_ON_BLACK.png" style="float:left;margin-left:5px;"></a></div>
 		<div class="banner bottom"></div>
 		
 		<div class="container">
@@ -44,7 +24,7 @@ function myFunction() {
 			
 			<span class="pic">
 
-				<img id="logobar" alt="" src="./npc_imgs/{{npc.name}}.png" width="300" height="auto" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.png';" />
+				<img id="logo" alt="" src="./npc_imgs/{{npc.name}}.png" width="300" height="auto" onerror="this.onerror=null;this.src='./npc_imgs/DUMMY.png';" />
 				
 			  </span>
 			</div>
