--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -302,7 +302,7 @@
 								<h3>Special Abilities</h3>
 					
 								
-								{{#npc.specialties.special-abilities.lengh}}
+								{{#npc.specialties.special-abilities.length}}
 								{{#npc.specialties.special-abilities}}
 								{{.}}
 								{{/npc.specialties.special-abilities}}
