Ere we go mates.

--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -15,8 +15,7 @@
 
 	<body>
 		
-		<div class="banner"><a href="../../../docs-index/index.html">
-			<img src="images/LOGO_TWO_FINAL_ON_BLACK.png" alt:"" style="float:left;margin-left:5px;" /></a></div>
+		<div class="banner"><a href="../../../docs-index/index.html"><img src="images/LOGO_TWO_FINAL_ON_BLACK.png" alt:"" style="float:left;margin-left:5px;" /></a></div>
 		<div class="banner bottom"></div>
 		
 		<div class="container">
