--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -378,9 +378,7 @@
 									{{#npc.traits.factions.length}}
 									{{#npc.traits.factions}}
 									
-										<li><b>{{name}}</b><br>
-					
-										<i>{{role}}</i><br>
+										<b>{{name}} - </b><i>{{role}}</i><br>
 								<br></li>
 									{{/npc.traits.factions}}
 									{{/npc.traits.factions.length}}
