--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -759,7 +759,7 @@
 								
 								{{#npc.special-abilities.length}}
 								{{#npc.special-abilities}}
-								<span class="ability-item"><p><b>{{title}}</b> - {{{description}}}<br></p></span>
+								<span class="ability-item">{{{.}}}<br></p></span>
 								{{/npc.special-abilities}}
 								{{/npc.special-abilities.length}}	
 									
