--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -761,9 +761,9 @@
 								{{#npc.special-abilities}}
 								<span class="ability-item">
 									<ul>
-									<br>{{#each items}}
+									<br>
 									<li> {{@index}} - {{.}} </li>
-										{{/each}}</ul></p></span>
+										</ul></p></span>
 								{{/npc.special-abilities}}
 								{{/npc.special-abilities.length}}	
 									
