--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -762,11 +762,11 @@
 								<span class="ability-item">
 									<ul>
 									<br>
-										{{#racial-abilities.length}}
-										{{#racial-abilities}}
+										{{#class-abilities.length}}
+										{{#class-abilities}}
 									<li>{.} </li>
-									{{/racial-abilities}}
-									{{/racial-abilities.length}}
+									{{/class-abilities}}
+									{{/class-abilities.length}}
 									</ul></p></span>
 								{{/npc.special-abilities}}
 								{{/npc.special-abilities.length}}	
