--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -763,8 +763,10 @@
 									<ul>
 									<br>
 									
-									<li>{{.}} </li>
-									
+									<b>{{title}}</b>
+									{{description}}
+								    {{abilities}}
+								    {{additional-information}}
 									</ul></p></span>
 								{{/npc.special-abilities}}
 								{{/npc.special-abilities.length}}	
