--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -763,10 +763,10 @@
 									<ul>
 									<br>
 									
-									<b>{{title}}</b>
-									{{description}}
-								    {{abilities}}
-								    {{additional-information}}
+										<b>{{#title}}</b>{{/title}}
+									{{#description}}{{/description}}
+								    {{#abilities}}{{/abilities}}
+								    {{#additional-information}}{{/additional-information}}
 									</ul></p></span>
 								{{/npc.special-abilities}}
 								{{/npc.special-abilities.length}}	
