--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -762,8 +762,8 @@
 								<span class="ability-item">
 									<ul>
 									<br>
-									    {{#title}}
-										<b>{{.}}</b>
+									    
+										<b>{{#title}}</b>
 										{{/title}}
 									    {{#description}}
 										{{.}}
