--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -761,11 +761,16 @@
 								{{#npc.special-abilities}}
 								<span class="ability-item">
 									<br>
-									    
+									{{#npc.special-abilities.title.length}}    
 									<p><b>{{#npc.special-abilities.title}}{{.}}{{/npc.special-abilities.title}}</b></p>
 								    <p>{{#npc.special-abilities.description}}{{.}}{{/npc.special-abilities.description}}</p>
+									{{/npc.special-abilities.title.length}}
+									{{#npc.special-abilities.abilities.length}}
 									<p>{{#npc.special-abilities.abilities}}{{.}}{{/npc.special-abilities.abilities}}</p>
+									{{/npc.special-abilities.abilities.length}}
+									{{#npc.special-abilities.additional-information.length}}
 									<p>{{#npc.special-abilities.additional-information}}{{.}}{{/npc.special-abilities.additional-information}}</p>
+									{{/npc.special-abilities.additional-information.length}}
 								</span>
 								{{/npc.special-abilities}}
 								{{/npc.special-abilities.length}}	
