--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -762,14 +762,14 @@
 								<span class="ability-item">
 									<br>
 									{{#npc.special-abilities.title.length}}    
-									<p><b>{{#npc.special-abilities.title}}{{.}}{{/npc.special-abilities.title}}</b></p>
-								    <p>{{#npc.special-abilities.description}}{{.}}{{/npc.special-abilities.description}}</p>
+									<p><b>{{#npc.special-abilities.title}}{{title}}{{/npc.special-abilities.title}}</b></p>
+								    <p>{{#npc.special-abilities.description}}{{desctiption}}{{/npc.special-abilities.description}}</p>
 									{{/npc.special-abilities.title.length}}
 									{{#npc.special-abilities.abilities.length}}
-									<p>{{#npc.special-abilities.abilities}}{{.}}{{/npc.special-abilities.abilities}}</p>
+									<p>{{#npc.special-abilities.abilities}}{{abilities}}{{/npc.special-abilities.abilities}}</p>
 									{{/npc.special-abilities.abilities.length}}
 									{{#npc.special-abilities.additional-information.length}}
-									<p>{{#npc.special-abilities.additional-information}}{{.}}{{/npc.special-abilities.additional-information}}</p>
+									<p>{{#npc.special-abilities.additional-information}}{{additional-information}}{{/npc.special-abilities.additional-information}}</p>
 									{{/npc.special-abilities.additional-information.length}}
 								</span>
 								{{/npc.special-abilities}}
