--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -762,7 +762,7 @@
 								<span class="ability-item">
 									<br>
 								 
-									<p>{{#npc.special-abilities.title.length}}{{#npc.special-abilities.title}}<b>{{#npc.special-abilities.title}}{{/{{#npc.special-abilities.title}}{{{{#npc.special-abilities.title.length}}</b></p>
+									<p>{{#npc.special-abilities.title.length}}{{#npc.special-abilities.title}}<b>{{npc.special-abilities.title}}{{/npc.special-abilities.title}}{{/npc.special-abilities.title.length}}</b></p>
 								    <p>{{description}}</p>
 									
 									<p>{{abilities}}</p>
