--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -769,8 +769,9 @@
 									<ul>
 										{{#abilities}}
 										<li>{{.}}</li>
-										{{/abilities}}</p>
+										{{/abilities}}
 									</ul>
+									</p>
 									<p>
 										{{#additional-information}}
 										<li>{{.}}</li>
