--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -767,14 +767,16 @@
 									<p>
 									<ul>
 										{{#abilities}}
-										<li>{{.}}</li>
+										<li><p><b>{{title}}</b><br>
+								   		<p>Description: {{{description}}}</p></li>
 										{{/abilities}}
 									</ul>
 								    </p>
 									<p>
 									<ul>
 										{{#additional-information}}
-										<li>{{.}}</li>
+										<li><p><b>{{title}}</b><br>
+								  	    <p>Description: {{{description}}}</p></li>
 										{{/additional-information}}
 									</ul>
 								    </p>
