--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -768,7 +768,7 @@
 									<ul>
 										{{#abilities}}
 										<li><p><b>{{title}}</b><br>
-								   		<p>Description: {{{description}}}</p></li>
+								   		<p>Description: {{{description}}}</p>{{{additional-information}}}</li>
 										{{/abilities}}
 									</ul>
 								    </p>
@@ -776,7 +776,7 @@
 									<ul>
 										{{#additional-information}}
 										<li><p><b>{{title}}</b><br>
-								  	    <p>Description: {{{description}}}</p></li>
+								  	    <p>Description: {{{description}}} {{{additional-information}}}</p></li>
 										{{/additional-information}}
 									</ul>
 								    </p>
