--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -767,7 +767,7 @@
 									<p>
 									
 										{{#abilities}}
-										<p>{{#title}}<b>{{.}}{{/title}}: </b>{{#content}}{{{.}}}{{/content}}</p>
+										{{#title}}<p><b>{{.}}{{/title}}: </b>{{#content}}{{{.}}}{{/content}}</p>
 											<p>{{#additional-information}}{{{.}}}{{/additional-information}}</p>
 										{{/abilities}}
 									
