--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -768,7 +768,7 @@
 									<p>
 									
 										{{#abilities}}
-										{{#title}}<p><b>{{.}}{{/title}}: </b>{{#content}}{{{.}}}{{/content}}</p></br>
+										{{#title}}<p><b>{{.}}{{/title}}: </b>{{#content}}{{{.}}}{{/content}}</p><br>
 											<p>{{#additional-information}}{{{.}}}{{/additional-information}}</p>
 										{{/abilities}}
 									
