--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -768,8 +768,8 @@
 									<p>
 									
 										{{#abilities}}
-										{{#title}}<p><b>{{.}}{{/title}}: </b>{{#content}}{{{.}}}{{/content}}</p>
-											<p>{{#additional-information}}{{{.}}}{{/additional-information}}</p>
+										{{#title}}<p><b>{{.}}{{/title}}: </b>{{#content}}{{{.}}}{{/content}}</p><br>
+											<p>{{#additional-information}}{{{.}}}{{/additional-information}}</p><br>
 										{{/abilities}}
 									
 								    </p><br>
