--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -893,7 +893,7 @@
 								<br>
 								{{#npc}}
 								{{#special-abilities}}
-								<span class="ability-item">
+								<span class="ability-item" id="needtowrap">
 														 
 									<p><b>{{title}}</b></p>
 								    <p>{{content}}<br></p>
