--- a/npcs/html/npc_template.html
+++ b/npcs/html/npc_template.html
@@ -809,7 +809,7 @@
 					
 						<span class="data">
 							
-										<span class="right-line">
+										<span class="right-line-first">
 			
 										<h3>Mannerisms</h3>
 											<br>
